Related Products Fix - Filters visible

--- a/MasterStyleCSS/MasterStyle.css
+++ b/MasterStyleCSS/MasterStyle.css
@@ -864,7 +864,7 @@ color:rgba(255, 255, 255, 0);
     bottom: initial;
     position: absolute;
     left: 0;
-    z-index:99;
+    z-index:2;
 }
 .br-sf-widget-merchant-popup-maincont{
     width: 95%;
@@ -901,7 +901,7 @@ color:rgba(255, 255, 255, 0);
 /* Relative products */
 .br-sf-widget-merchant-popup-maincont{
     width: 60%;
-    margin-top: 4%;
+    margin-top: 4.5em;
 }
 /* End Relative products */
 
